--- a/A2-18_02_25/demo/src/main/resources/application.properties
+++ b/A2-18_02_25/demo/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=demo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/P4_back
+spring.datasource.username=d4nkali
+spring.datasource.password=D19d4n1!
