--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-[200~# EditorConfig is awesome: https://EditorConfig.org
+# EditorConfig is awesome: https://EditorConfig.org
 
 # top-most EditorConfig file
 root = true
