--- a/A7-08_04_25/src/main/resources/application.properties
+++ b/A7-08_04_25/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/p4_back
 spring.datasource.username=d4nkali
 spring.datasource.password=D19d4n1!
+api.security.token.secret=${JWT_SECRET: 12345678}
