--- a/A10-29_04_25/src/main/resources/application.properties
+++ b/A10-29_04_25/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/p4_back
-spring.datasource.username=d4nkali
-spring.datasource.password=D19d4n1!
+spring.datasource.username=root
+spring.datasource.password=saulo123
 api.security.token.secret=${JWT_SECRET: 12345678}
